updated target frameworks

--- a/Apps.DataClient.Core/Apps.DataClient.Core.csproj
+++ b/Apps.DataClient.Core/Apps.DataClient.Core.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFrameworks>net5.0; netstandard2.1</TargetFrameworks>
     <Authors>Jake B. Parane</Authors>
     <Description>A class library containing core abstractions for a data client app.</Description>
     <Copyright>© 2021</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>dataclient data</PackageTags>
+    <RepositoryUrl>https://github.com/oenarap/Apps.DataClient.Core</RepositoryUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
